--- a/solution2/index.html
+++ b/solution2/index.html
@@ -12,19 +12,19 @@
     <h1>Our menu</h1>
     <div class="row">
         <div class="col-dt-4 col-tab-6">
-            <div class="section-container" style="margin: 10px 10px 10px 10px;">
+            <div class="section-container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quam itaque aperiam cupiditate dolorem odit doloremque, perferendis, accusamus modi debitis quasi deleniti maiores. Labore sed, fugiat ut iusto iure, laborum. Lorem</p>
                 <p id="s1" class="section">Chicken</p>
             </div>
         </div>
         <div class="col-dt-4 col-tab-6">
-            <div class="section-container" style="margin: 10px 10px 10px 10px;">
+            <div class="section-container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quam itaque aperiam cupiditate dolorem odit doloremque, perferendis, accusamus modi debitis quasi deleniti maiores. Labore sed, fugiat ut iusto iure, laborum. Lorem</p>
                 <p id="s2" class="section">Beef</p>
             </div>
         </div>
         <div class="col-dt-4 col-tab-12">
-            <div class="section-container" style="margin: 10px 10px 10px 10px;">
+            <div class="section-container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quam itaque aperiam cupiditate dolorem odit doloremque, perferendis, accusamus modi debitis quasi deleniti maiores. Labore sed, fugiat ut iusto iure, laborum. Lorem</p>
                 <p id="s3" class="section">Sushi</p>
             </div>
